--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_URL=http://localhost:8000
-WEBSOCKET_URL='wss://ws.postman-echo.com/raw'
+REACT_APP_WEBSOCKET_URL=wss://ws.postman-echo.com/raw
